--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,28 @@
 {
   "compilerOptions": {
-   	"baseUrl": "src",
-   	"outDir": "dist",
+    "baseUrl": "src",
+    "outDir": "dist",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",  // or "CommonJS" if you are targeting Node.js
-    "target": "ES2020",  // Modern target for better browser support
+    "target": "ES2022",  // Single target option
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
-	"strictNullChecks": true,
+    "strictNullChecks": true,
     "strict": true,  // Enforces strict type checking options
     "lib": [
       "DOM",
-      "ES2020"
+      "ES2022"
     ],
     //"jsx": "react-jsx", // Required by React
   },
 
   "typeRoots": ["./src/types","./node_modules/@types"],
   "include": [
-	"./src/**/*.ts",
-    "./src/types/**/*.d.ts"
-  ]
+   "./src/**/*.ts",
+   "./src/types/**/*.d.ts"
+ ]
 }
