--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bibdesk-integration",
     "version": "1.0.0",
-    "description": "Allows using BibTex citations and opening attached PDFs from a BibDesk library.",
+    "description": "Import BibTex citations into your notes and open PDF documents linked in a BibDesk library.",
     "main": "main.js",
     "scripts": {
         "dev": "node esbuild.config.mjs",
