Updated description as per request https://github.com/obsidianmd/obsidian-releases/pull/4569#issuecomment-2653343615

--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "bibdesk-integration",
 	"name": "BibDesk Integration",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"minAppVersion": "1.5.0",
-	"description": "Allows using BibTex citations and opening attached PDFs from a BibDesk library.",
+	"description": "Import BibTex citations into your notes and open PDF documents linked in a BibDesk library.",
 	"author": "Andrea Alberti",
 	"authorUrl": "https://www.linkedin.com/in/dr-andrea-alberti/",
 	"fundingUrl": "https://buymeacoffee.com/alberti",
