--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^16.18.105",
-        "@typescript-eslint/eslint-plugin": "5.29.0",
-        "@typescript-eslint/parser": "5.29.0",
+        "@typescript-eslint/eslint-plugin": "^8.0.0",
+        "@typescript-eslint/parser": "^8.0.0",
         "builtin-modules": "3.3.0",
-        "esbuild": "0.17.3",
+        "esbuild": "0.25.5",
         "esbuild-plugin-copy": "^2.1.1",
         "obsidian": "latest",
         "peggy": "^4.0.3",
-        "tslib": "2.4.0",
-        "typescript": "4.7.4"
+        "tslib": "^2.8.0",
+        "typescript": "^5.8.3"
     },
     "dependencies": {
         "add": "^2.0.6",
