fix: the bookmark_resolver script now extracts the version from package.json and injects it into the Swift source code to keep the version synced automatically
package.json — the bookmark_resolver script now extracts the version from package.json via node -p and injects it into the Swift source with sed before compiling. The version script also stages the Swift file.

version-bump.mjs — now also patches let VERSION = "..." in bookmark_resolver.swift alongside manifest.json and versions.json.

So the version stays in sync through two independent paths:
- npm version → version-bump.mjs updates the Swift source
- npm run bookmark_resolver → sed injects the version before compiling

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "dev": "node esbuild.config.mjs",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-        "version": "node version-bump.mjs && git add manifest.json versions.json",
+        "version": "node version-bump.mjs && git add manifest.json versions.json bookmark_resolver/bookmark_resolver.swift",
         "grammar": "peggy --format es src/grammar.pegjs -o src/peggy.mjs",
-        "bookmark_resolver": "swiftc -O -target arm64-apple-macosx11.0 -o dist/bookmark_resolver-arm64 bookmark_resolver/bookmark_resolver.swift && swiftc -O -target x86_64-apple-macosx11.0 -o dist/bookmark_resolver-x86_64 bookmark_resolver/bookmark_resolver.swift && lipo -create dist/bookmark_resolver-arm64 dist/bookmark_resolver-x86_64 -output dist/bookmark_resolver && rm dist/bookmark_resolver-arm64 dist/bookmark_resolver-x86_64 && codesign --sign 'Developer ID Application: Andrea Alberti (9V3X7C8VCK)' --options runtime dist/bookmark_resolver"
+        "bookmark_resolver": "node esbuild.bookmark_resolver.mjs"
     },
     "keywords": [],
     "author": "Andrea Alberti",
