--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 	"id": "bibdesk-integration",
 	"name": "BibDesk Integration",
-	"version": "1.1.0",
 	"minAppVersion": "1.5.0",
 	"description": "Import BibTex citations into your notes and open PDF documents linked in a BibDesk library.",
 	"author": "Andrea Alberti",
 	"authorUrl": "https://www.linkedin.com/in/dr-andrea-alberti/",
 	"fundingUrl": "https://buymeacoffee.com/alberti",
-	"isDesktopOnly": true
+	"isDesktopOnly": true,
+	"version": "1.2.0"
 }
