--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "bibdesk-integration",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "Import BibTex citations into your notes and open PDF documents linked in a BibDesk library.",
     "main": "main.js",
     "scripts": {
         "dev": "node esbuild.config.mjs",
         "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-        "version": "node version-bump.mjs && git add manifest.json versions.json bookmark_resolver/bookmark_resolver.swift",
+        "version": "node version-bump.mjs && git add manifest.json versions.json bookmark_resolver/bookmark_resolver.swift bookmark_resolver/bookmark_resolver.applescript",
         "grammar": "peggy --format es src/grammar.pegjs -o src/peggy.mjs",
         "bookmark_resolver": "node esbuild.bookmark_resolver.mjs"
     },
